fix: align main nav with logo font top

--- a/app/assets/stylesheets/partials/_page.css.sass
+++ b/app/assets/stylesheets/partials/_page.css.sass
@@ -42,7 +42,7 @@ html
 .main-navigation
   +horizontal-list(0.55em)
   +float_right
-  margin-top: 23px
+  margin-top: 15px
 
 .meta-navigation
   +horizontal-list(10px)
